# simlay.github.io

./: .gitmodules  404.html  CNAME  README.md  config.toml  index.html  robots.txt  sitemap.xml
.github/workflows/: gh-deploy.yml
code/2023-04-03-rust-target-runner-for-ios/: Cargo.toml  ios-sim-runner.sh
code/2023-04-03-rust-target-runner-for-ios/.cargo/: config.toml
code/2023-04-03-rust-target-runner-for-ios/src/: main.rs
code/2026-01-13-use-objc2-xc-ui-automation/: .gitignore  Cargo.toml  Makefile
code/2026-01-13-use-objc2-xc-ui-automation/.cargo/: config.toml
code/2026-01-13-use-objc2-xc-ui-automation/ui_tests/: Cargo.toml
code/2026-01-13-use-objc2-xc-ui-automation/ui_tests/src/: main.rs
code/2026-01-use-objc2-xc-ui-automation/: Cargo.toml  Makefile
code/2026-01-use-objc2-xc-ui-automation/RustApp.app/: .gitignore  Info.plist
code/2026-01-use-objc2-xc-ui-automation/RustUITests.app/PlugIns/DinghyUITests.xctest/: .gitignore
code/2026-01-use-objc2-xc-ui-automation/src/: main.rs
code/2026-01-use-objc2-xc-ui-automation/ui_tests/src/: main.rs
content/: _index.md  me.md
content/posts/: 2020-08-14-rust-bindgen-objc-support.md  2020-08-17-using-uikit-sys.md  2020-08-23-attempting-to-add-memory-collection-objc-rust-bindgen.md  2023-04-03-rust-target-runner-for-ios.md  2023-04-04-rust-target-runner-for-ios.md  2026-01-13-rust-xctesting.md  2026-01-rust-xctesting.md  _index.md
me/: index.html
page/1/: index.html
page/2/: index.html
posts/2026-01-rust-xctesting/: index.html
posts/rust-bindgen-objc-support/: index.html
posts/rust-target-runner-for-ios/: index.html
posts/using-uikit-sys/: index.html
public/: index.html
templates/: base.html  blog.html  index.html  me.html
templates/shortcodes/: source_code.md
(+2 files in other folders)
