[package]
name = "ui_tests"
edition = "2024"

[dependencies]
objc2 = "0.6"
objc2-xc-test = { version = "0.3", default-features = false }
objc2-xc-ui-automation = { version = "0.3", default-features = false, features = ["objc2-ui-kit"]}
objc2-foundation = "0.3"
objc2-ui-kit = "0.3"
ctor = { version = "0.6", default-features = false, features = ["proc_macro"] }
